<resources>
    <string name="app_name">"BullBuy "</string>
    <string-array name="app_menu">
        <item>Navigate to...</item>
        <item>Home</item>
        <item>Sell Item</item>
        <item>Watch List</item>
        <item>Campus Locations</item>
        <item>Messaging</item>
        <item>My Items</item>
        <item>Log Out</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="Welcome">Welcome to BullBuy</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="NotRegistered">Not registered?</string>
    <string name="Password">Password</string>
    <string name="EMail">USF E-Mail</string>

    <string name="title_activity_register">Register</string>
    <string name="Name">Name</string>
    <string name="title_activity_home">Home</string>
    <string name="search">Search BullBuy</string>
    <string name="search_text">Search</string>
    <string name="search_title">View recent postings:</string>

    <string name="Post">Post</string>
    <string name="Watch">Watch</string>
    <string name="Locations">USF Campus</string>
    <string name="Messenger">Messenger</string>
    <string name="MyItems">My Items</string>
    <string name="title_activity_post_item">Sell an item</string>

    <string name="Constructing">UNDER CONSTRUCTION</string>

    <string name="ItemTitle">Title (at least 4 characters)</string>
    <string name="ItemPrice">Price (in USD - format must be X.XX)</string>
    <string name="ItemDescription">Description (at least 10 characters)</string>
    <string name="title_activity_watch">Watchlist</string>
    <string name="Watching">Watch List</string>

    <string name="locationsList">USF On-Campus Locations</string>
    <string name="MSC">Marshall Student Center (MSC)</string>
    <string name="title_activity_usflocations">Campus Locations</string>

    <string-array name="locations">
        <item>Current Location</item>
        <item>Tampa Campus Library</item>
        <item>Marshall Student Center</item>
        <item>Interdisciplinary Sciences</item>
        <item>Muma College of Business</item>
        <item>Cooper Hall</item>
        <item>CIS Building</item>
        <item>Recreation Center</item>
        <item>Juniper-Poplar Hall</item>
        <item>Engineering Building II</item>
        <item>USF Bookstore</item>
    </string-array>

    <string name="showMarkers">Show All Locations</string>

    <string name="title_activity_my_items">My Items</string>
    <string name="myItems">My Items</string>
    <string name="myItems_description">Items that you have posted.</string>
    <string name="myWatch_description">Items that you are watching.</string>

    <string name="title_activity_messenger">Messaging</string>
    <string name="Messages">Messages</string>
    <string name="title_activity_view_my_item">View Item</string>
    <string name="update">Update Post</string>
    <string name="delete">Delete Post</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_item">View Item</string>
    <string name="clear">Clear</string>
    <string name="add_watchlist">Add To Watchlist</string>
    <string name="remove_watchlist">Remove From Watchlist</string>
    <string name="message_seller">Message Seller</string>
    <string name="title_activity_view_watch_item">View Item</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="conversationsListHeader">Tap a conversation to open it.</string>
    <string name="sender_message_header">You</string>
    <string name="recipient_message_header">Them</string>
</resources>
