<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login"
    android:touchscreenBlocksFocus="false"
    android:transitionGroup="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/droid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="28sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/eMail_LOGIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_marginTop="15dp"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/password_LOGIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true"/>
    <Button
        android:id="@+id/loginButton_LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/NotRegistered"
        android:textColor="#000000" />
    <Button
        android:id="@+id/registerButton_LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-5dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:nestedScrollingEnabled="false"
        android:elegantTextHeight="false"
        android:textColor="#000000" />


</LinearLayout>
