<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mycompany.bullbuy.Register">

    <EditText
        android:id="@+id/name_REGISTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/eMail_REGISTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMail"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/password_REGISTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <Button
        android:id="@+id/registerButton_REGISTER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:typeface="sans"
        android:textStyle="bold"
        android:textColor="#000000" />

</LinearLayout>
