<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.mycompany.bullbuy.PostItem">
    <ImageView
        android:id="@+id/photo_PostItem"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sell_item"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/itemTitle_PostItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/ItemTitle"
        android:fontFamily="roboto-slab"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/itemPrice_PostItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:hint="@string/ItemPrice"
        android:fontFamily="roboto-slab"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <EditText
        android:id="@+id/itemDescription_PostItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ItemDescription"
        android:fontFamily="roboto-slab"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <Button
        android:id="@+id/postButton_PostItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/Post"
        android:textStyle="bold"
        android:fontFamily="roboto-slab"
        android:background="@color/darkGreen"
        android:nestedScrollingEnabled="false"
        android:elegantTextHeight="false"
        android:textColor="#FFFFFF" />
</LinearLayout>